fix ul_disc gap

--- a/css/main.css
+++ b/css/main.css
@@ -112,7 +112,7 @@ circle:nth-child(1) {
 .soc-item {
     width: 2.2rem;
     height: 2rem;
-    box-shadow: 0;
+    box-shadow: none;
     transform: scale(1);
     border-radius: 10rem;
     background-size: 2rem;
@@ -196,8 +196,11 @@ circle:nth-child(1) {
 }
 
 .ul_disc {
+    margin-top: 1rem;
+    display: flex;
+    flex-direction: column;
     list-style: disc;
-    /*text-indent: -8px;*/
+    gap: .6rem;
 }
 
 .li-font{
